[package]
name = "conan-doxygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
colored = "2.1.0"
handlebars = "5.0.0"
indicatif = "0.17.7"
opener = "0.6.1"
serde_json = "1.0.113"
